--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -1,4 +1,4 @@
-*{
+.clear{
 	margin:0px;
 	padding:0px;
 	border:0px;
@@ -14,14 +14,13 @@ div{
 	background-color:#ffffff;
 	z-index:99999;
 }
-.titleBar .title{
+.title{
 	height:100%;
 	width:150px;
-	background-color:#080808;
 	text-align:center;
-	line-height:56px;
-	font-size:28px;
-	font-family: Verdana, Arial, 'ËÎÌå';
+	line-height:46px;
+	font-size:24px;
+	font-family: Verdana, Arial, 'å®‹ä½“';
 	color:#fff;
 	font-weight:900;
 	float:left;
@@ -33,7 +32,7 @@ div{
 	float:right;
 	margin:11px 11px;
 	font-size:12px;
-	font-family: Verdana, Arial, 'ËÎÌå';
+	font-family: Verdana, Arial, 'å®‹ä½“';
 	color:#080808;
 	font-weight:600;
 	line-height:34px;
@@ -49,7 +48,7 @@ div{
 	margin:30px 50px;
 	background-color:#080808;
 	font-size:32px;
-	font-family: Verdana, Arial, 'ËÎÌå';
+	font-family: Verdana, Arial, 'å®‹ä½“';
 	color:#ffffff;
 	font-weight:600;
 	box-shadow:1px 1px 0px #111111;
@@ -69,7 +68,6 @@ div{
 }
 .roundBox{
 	border: 1px solid rgb(185, 185, 185);
-	position: relative;
 	margin:5px 5px;
 	border-radius:10px;
 	background-color:#ffffff;
@@ -92,10 +90,16 @@ ul{
 }
 #input{
 	width:100%;
-	height:80%;
+	height:800px;
 	float:center;
-	background-color:#eee;
-	margin-top:50px;
+	background-color:#fefefe;
 	resize:none;
 	font-size:18px;
+}
+.body {
+	padding-top:60px;
+}
+
+.center {
+	margin: 10px auto;
 }
